syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse { int32 sum = 1; }

message PrimeDecompositionRequest { int64 number = 1; }

message PrimeDecompositionResponse { int64 prime_number = 1; }

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeDecomposition(PrimeDecompositionRequest)
      returns (stream PrimeDecompositionResponse) {};
}